Remove country segment, its now in its own repo. Version bump. Add settings in test project for aldryn-country-segment

--- a/segmentation/locale/fr/LC_MESSAGES/django.po
+++ b/segmentation/locale/fr/LC_MESSAGES/django.po
@@ -101,1022 +101,6 @@ msgstr "Valeur à considérer"
 msgid "“{key}” equals “{value}”"
 msgstr "«{key}» est égal à «{value}»"
 
-#: models.py:199
-msgid "Anonymous Proxy"
-msgstr "Anonyme proxy"
-
-#: models.py:200
-msgid "Satellite Provider"
-msgstr "Fournisseur de satellite"
-
-#: models.py:201
-msgid "Other Country"
-msgstr "Autres Pays"
-
-#: models.py:202
-msgid "Andorra"
-msgstr ""
-
-#: models.py:203
-msgid "United Arab Emirates"
-msgstr ""
-
-#: models.py:204
-msgid "Afghanistan"
-msgstr ""
-
-#: models.py:205
-msgid "Antigua and Barbuda"
-msgstr ""
-
-#: models.py:206
-msgid "Anguilla"
-msgstr ""
-
-#: models.py:207
-msgid "Albania"
-msgstr ""
-
-#: models.py:208
-msgid "Armenia"
-msgstr ""
-
-#: models.py:209
-msgid "Angola"
-msgstr ""
-
-#: models.py:210
-msgid "Asia/Pacific Region"
-msgstr ""
-
-#: models.py:211
-msgid "Antarctica"
-msgstr ""
-
-#: models.py:212
-msgid "Argentina"
-msgstr ""
-
-#: models.py:213
-msgid "American Samoa"
-msgstr ""
-
-#: models.py:214
-msgid "Austria"
-msgstr ""
-
-#: models.py:215
-msgid "Australia"
-msgstr ""
-
-#: models.py:216
-msgid "Aruba"
-msgstr ""
-
-#: models.py:217
-msgid "Aland Islands"
-msgstr ""
-
-#: models.py:218
-msgid "Azerbaijan"
-msgstr ""
-
-#: models.py:219
-msgid "Bosnia and Herzegovina"
-msgstr ""
-
-#: models.py:220
-msgid "Barbados"
-msgstr ""
-
-#: models.py:221
-msgid "Bangladesh"
-msgstr ""
-
-#: models.py:222
-msgid "Belgium"
-msgstr ""
-
-#: models.py:223
-msgid "Burkina Faso"
-msgstr ""
-
-#: models.py:224
-msgid "Bulgaria"
-msgstr ""
-
-#: models.py:225
-msgid "Bahrain"
-msgstr ""
-
-#: models.py:226
-msgid "Burundi"
-msgstr ""
-
-#: models.py:227
-msgid "Benin"
-msgstr ""
-
-#: models.py:228
-msgid "Saint Bartelemey"
-msgstr ""
-
-#: models.py:229
-msgid "Bermuda"
-msgstr ""
-
-#: models.py:230
-msgid "Brunei Darussalam"
-msgstr ""
-
-#: models.py:231
-msgid "Bolivia"
-msgstr ""
-
-#: models.py:232
-msgid "Bonaire, Saint Eustatius and Saba"
-msgstr ""
-
-#: models.py:233
-msgid "Brazil"
-msgstr ""
-
-#: models.py:234
-msgid "Bahamas"
-msgstr ""
-
-#: models.py:235
-msgid "Bhutan"
-msgstr ""
-
-#: models.py:236
-msgid "Bouvet Island"
-msgstr ""
-
-#: models.py:237
-msgid "Botswana"
-msgstr ""
-
-#: models.py:238
-msgid "Belarus"
-msgstr ""
-
-#: models.py:239
-msgid "Belize"
-msgstr ""
-
-#: models.py:240
-msgid "Canada"
-msgstr ""
-
-#: models.py:241
-msgid "Cocos (Keeling) Islands"
-msgstr ""
-
-#: models.py:242
-msgid "Congo, The Democratic Republic of the"
-msgstr ""
-
-#: models.py:243
-msgid "Central African Republic"
-msgstr ""
-
-#: models.py:244
-msgid "Congo"
-msgstr ""
-
-#: models.py:245
-msgid "Switzerland"
-msgstr "Suisse"
-
-#: models.py:246
-msgid "Cote d’Ivoire"
-msgstr ""
-
-#: models.py:247
-msgid "Cook Islands"
-msgstr ""
-
-#: models.py:248
-msgid "Chile"
-msgstr ""
-
-#: models.py:249
-msgid "Cameroon"
-msgstr ""
-
-#: models.py:250
-msgid "China"
-msgstr "Chine"
-
-#: models.py:251
-msgid "Colombia"
-msgstr ""
-
-#: models.py:252
-msgid "Costa Rica"
-msgstr ""
-
-#: models.py:253
-msgid "Cuba"
-msgstr ""
-
-#: models.py:254
-msgid "Cape Verde"
-msgstr ""
-
-#: models.py:255
-msgid "Curacao"
-msgstr ""
-
-#: models.py:256
-msgid "Christmas Island"
-msgstr ""
-
-#: models.py:257
-msgid "Cyprus"
-msgstr ""
-
-#: models.py:258
-msgid "Czech Republic"
-msgstr ""
-
-#: models.py:259
-msgid "Germany"
-msgstr "Allemagne"
-
-#: models.py:260
-msgid "Djibouti"
-msgstr ""
-
-#: models.py:261
-msgid "Denmark"
-msgstr ""
-
-#: models.py:262
-msgid "Dominica"
-msgstr ""
-
-#: models.py:263
-msgid "Dominican Republic"
-msgstr ""
-
-#: models.py:264
-msgid "Algeria"
-msgstr ""
-
-#: models.py:265
-msgid "Ecuador"
-msgstr ""
-
-#: models.py:266
-msgid "Estonia"
-msgstr ""
-
-#: models.py:267
-msgid "Egypt"
-msgstr ""
-
-#: models.py:268
-msgid "Western Sahara"
-msgstr ""
-
-#: models.py:269
-msgid "Eritrea"
-msgstr ""
-
-#: models.py:270
-msgid "Spain"
-msgstr "Espagne"
-
-#: models.py:271
-msgid "Ethiopia"
-msgstr ""
-
-#: models.py:272
-msgid "Europe"
-msgstr ""
-
-#: models.py:273
-msgid "Finland"
-msgstr "Finlande"
-
-#: models.py:274
-msgid "Fiji"
-msgstr ""
-
-#: models.py:275
-msgid "Falkland Islands (Malvinas)"
-msgstr ""
-
-#: models.py:276
-msgid "Micronesia, Federated States of"
-msgstr ""
-
-#: models.py:277
-msgid "Faroe Islands"
-msgstr ""
-
-#: models.py:278
-msgid "France"
-msgstr ""
-
-#: models.py:279
-msgid "Gabon"
-msgstr ""
-
-#: models.py:280
-msgid "United Kingdom"
-msgstr "Royaume-Uni"
-
-#: models.py:281
-msgid "Grenada"
-msgstr ""
-
-#: models.py:282
-msgid "Georgia"
-msgstr ""
-
-#: models.py:283
-msgid "French Guiana"
-msgstr ""
-
-#: models.py:284
-msgid "Guernsey"
-msgstr ""
-
-#: models.py:285
-msgid "Ghana"
-msgstr ""
-
-#: models.py:286
-msgid "Gibraltar"
-msgstr ""
-
-#: models.py:287
-msgid "Greenland"
-msgstr ""
-
-#: models.py:288
-msgid "Gambia"
-msgstr ""
-
-#: models.py:289
-msgid "Guinea"
-msgstr ""
-
-#: models.py:290
-msgid "Guadeloupe"
-msgstr ""
-
-#: models.py:291
-msgid "Equatorial Guinea"
-msgstr ""
-
-#: models.py:292
-msgid "Greece"
-msgstr ""
-
-#: models.py:293
-msgid "South Georgia and the South Sandwich Islands"
-msgstr ""
-
-#: models.py:294
-msgid "Guatemala"
-msgstr ""
-
-#: models.py:295
-msgid "Guam"
-msgstr ""
-
-#: models.py:296
-msgid "Guinea-Bissau"
-msgstr ""
-
-#: models.py:297
-msgid "Guyana"
-msgstr ""
-
-#: models.py:298
-msgid "Hong Kong"
-msgstr ""
-
-#: models.py:299
-msgid "Heard Island and McDonald Islands"
-msgstr ""
-
-#: models.py:300
-msgid "Honduras"
-msgstr ""
-
-#: models.py:301
-msgid "Croatia"
-msgstr ""
-
-#: models.py:302
-msgid "Haiti"
-msgstr ""
-
-#: models.py:303
-msgid "Hungary"
-msgstr ""
-
-#: models.py:304
-msgid "Indonesia"
-msgstr ""
-
-#: models.py:305
-msgid "Ireland"
-msgstr ""
-
-#: models.py:306
-msgid "Israel"
-msgstr ""
-
-#: models.py:307
-msgid "Isle of Man"
-msgstr ""
-
-#: models.py:308
-msgid "India"
-msgstr ""
-
-#: models.py:309
-msgid "British Indian Ocean Territory"
-msgstr ""
-
-#: models.py:310
-msgid "Iraq"
-msgstr ""
-
-#: models.py:311
-msgid "Iran, Islamic Republic of"
-msgstr ""
-
-#: models.py:312
-msgid "Iceland"
-msgstr ""
-
-#: models.py:313
-msgid "Italy"
-msgstr "Italie"
-
-#: models.py:314
-msgid "Jersey"
-msgstr ""
-
-#: models.py:315
-msgid "Jamaica"
-msgstr ""
-
-#: models.py:316
-msgid "Jordan"
-msgstr ""
-
-#: models.py:317
-msgid "Japan"
-msgstr ""
-
-#: models.py:318
-msgid "Kenya"
-msgstr ""
-
-#: models.py:319
-msgid "Kyrgyzstan"
-msgstr ""
-
-#: models.py:320
-msgid "Cambodia"
-msgstr ""
-
-#: models.py:321
-msgid "Kiribati"
-msgstr ""
-
-#: models.py:322
-msgid "Comoros"
-msgstr ""
-
-#: models.py:323
-msgid "Saint Kitts and Nevis"
-msgstr ""
-
-#: models.py:324
-msgid "Korea, Democratic People’s Republic of"
-msgstr ""
-
-#: models.py:325
-msgid "Korea, Republic of"
-msgstr ""
-
-#: models.py:326
-msgid "Kuwait"
-msgstr ""
-
-#: models.py:327
-msgid "Cayman Islands"
-msgstr ""
-
-#: models.py:328
-msgid "Kazakhstan"
-msgstr ""
-
-#: models.py:329
-msgid "Lao, People’s Democratic Republic of"
-msgstr ""
-
-#: models.py:330
-msgid "Lebanon"
-msgstr ""
-
-#: models.py:331
-msgid "Saint Lucia"
-msgstr ""
-
-#: models.py:332
-msgid "Liechtenstein"
-msgstr ""
-
-#: models.py:333
-msgid "Sri Lanka"
-msgstr ""
-
-#: models.py:334
-msgid "Liberia"
-msgstr ""
-
-#: models.py:335
-msgid "Lesotho"
-msgstr ""
-
-#: models.py:336
-msgid "Lithuania"
-msgstr ""
-
-#: models.py:337
-msgid "Luxembourg"
-msgstr ""
-
-#: models.py:338
-msgid "Latvia"
-msgstr ""
-
-#: models.py:339
-msgid "Libyan Arab Jamahiriya"
-msgstr ""
-
-#: models.py:340
-msgid "Morocco"
-msgstr ""
-
-#: models.py:341
-msgid "Monaco"
-msgstr ""
-
-#: models.py:342
-msgid "Moldova, Republic of"
-msgstr ""
-
-#: models.py:343
-msgid "Montenegro"
-msgstr ""
-
-#: models.py:344
-msgid "Saint Martin"
-msgstr ""
-
-#: models.py:345
-msgid "Madagascar"
-msgstr ""
-
-#: models.py:346
-msgid "Marshall Islands"
-msgstr ""
-
-#: models.py:347
-msgid "Macedonia"
-msgstr ""
-
-#: models.py:348
-msgid "Mali"
-msgstr ""
-
-#: models.py:349
-msgid "Myanmar"
-msgstr ""
-
-#: models.py:350
-msgid "Mongolia"
-msgstr ""
-
-#: models.py:351
-msgid "Macao"
-msgstr ""
-
-#: models.py:352
-msgid "Northern Mariana Islands"
-msgstr ""
-
-#: models.py:353
-msgid "Martinique"
-msgstr ""
-
-#: models.py:354
-msgid "Mauritania"
-msgstr ""
-
-#: models.py:355
-msgid "Montserrat"
-msgstr ""
-
-#: models.py:356
-msgid "Malta"
-msgstr ""
-
-#: models.py:357
-msgid "Mauritius"
-msgstr ""
-
-#: models.py:358
-msgid "Maldives"
-msgstr ""
-
-#: models.py:359
-msgid "Malawi"
-msgstr ""
-
-#: models.py:360
-msgid "Mexico"
-msgstr ""
-
-#: models.py:361
-msgid "Malaysia"
-msgstr ""
-
-#: models.py:362
-msgid "Mozambique"
-msgstr ""
-
-#: models.py:363
-msgid "Namibia"
-msgstr ""
-
-#: models.py:364
-msgid "New Caledonia"
-msgstr ""
-
-#: models.py:365
-msgid "Niger"
-msgstr ""
-
-#: models.py:366
-msgid "Norfolk Island"
-msgstr ""
-
-#: models.py:367
-msgid "Nigeria"
-msgstr ""
-
-#: models.py:368
-msgid "Nicaragua"
-msgstr ""
-
-#: models.py:369
-msgid "Netherlands"
-msgstr "Pays-Bas"
-
-#: models.py:370
-msgid "Norway"
-msgstr ""
-
-#: models.py:371
-msgid "Nepal"
-msgstr ""
-
-#: models.py:372
-msgid "Nauru"
-msgstr ""
-
-#: models.py:373
-msgid "Niue"
-msgstr ""
-
-#: models.py:374
-msgid "New Zealand"
-msgstr ""
-
-#: models.py:375
-msgid "Oman"
-msgstr ""
-
-#: models.py:376
-msgid "Panama"
-msgstr ""
-
-#: models.py:377
-msgid "Peru"
-msgstr ""
-
-#: models.py:378
-msgid "French Polynesia"
-msgstr ""
-
-#: models.py:379
-msgid "Papua New Guinea"
-msgstr ""
-
-#: models.py:380
-msgid "Philippines"
-msgstr ""
-
-#: models.py:381
-msgid "Pakistan"
-msgstr ""
-
-#: models.py:382
-msgid "Poland"
-msgstr ""
-
-#: models.py:383
-msgid "Saint Pierre and Miquelon"
-msgstr ""
-
-#: models.py:384
-msgid "Pitcairn"
-msgstr ""
-
-#: models.py:385
-msgid "Puerto Rico"
-msgstr ""
-
-#: models.py:386
-msgid "Palestinian Territory"
-msgstr ""
-
-#: models.py:387
-msgid "Portugal"
-msgstr ""
-
-#: models.py:388
-msgid "Palau"
-msgstr ""
-
-#: models.py:389
-msgid "Paraguay"
-msgstr ""
-
-#: models.py:390
-msgid "Qatar"
-msgstr ""
-
-#: models.py:391
-msgid "Reunion"
-msgstr ""
-
-#: models.py:392
-msgid "Romania"
-msgstr ""
-
-#: models.py:393
-msgid "Serbia"
-msgstr ""
-
-#: models.py:394
-msgid "Russian Federation"
-msgstr ""
-
-#: models.py:395
-msgid "Rwanda"
-msgstr ""
-
-#: models.py:396
-msgid "Saudi Arabia"
-msgstr ""
-
-#: models.py:397
-msgid "Solomon Islands"
-msgstr ""
-
-#: models.py:398
-msgid "Seychelles"
-msgstr ""
-
-#: models.py:399
-msgid "Sudan"
-msgstr ""
-
-#: models.py:400
-msgid "Sweden"
-msgstr ""
-
-#: models.py:401
-msgid "Singapore"
-msgstr ""
-
-#: models.py:402
-msgid "Saint Helena"
-msgstr ""
-
-#: models.py:403
-msgid "Slovenia"
-msgstr ""
-
-#: models.py:404
-msgid "Svalbard and Jan Mayen"
-msgstr ""
-
-#: models.py:405
-msgid "Slovakia"
-msgstr ""
-
-#: models.py:406
-msgid "Sierra Leone"
-msgstr ""
-
-#: models.py:407
-msgid "San Marino"
-msgstr ""
-
-#: models.py:408
-msgid "Senegal"
-msgstr ""
-
-#: models.py:409
-msgid "Somalia"
-msgstr ""
-
-#: models.py:410
-msgid "Suriname"
-msgstr ""
-
-#: models.py:411
-msgid "South Sudan"
-msgstr ""
-
-#: models.py:412
-msgid "Sao Tome and Principe"
-msgstr ""
-
-#: models.py:413
-msgid "El Salvador"
-msgstr ""
-
-#: models.py:414
-msgid "Sint Maarten"
-msgstr ""
-
-#: models.py:415
-msgid "Syrian Arab Republic"
-msgstr ""
-
-#: models.py:416
-msgid "Swaziland"
-msgstr ""
-
-#: models.py:417
-msgid "Turks and Caicos Islands"
-msgstr ""
-
-#: models.py:418
-msgid "Chad"
-msgstr ""
-
-#: models.py:419
-msgid "French Southern Territories"
-msgstr ""
-
-#: models.py:420
-msgid "Togo"
-msgstr ""
-
-#: models.py:421
-msgid "Thailand"
-msgstr ""
-
-#: models.py:422
-msgid "Tajikistan"
-msgstr ""
-
-#: models.py:423
-msgid "Tokelau"
-msgstr ""
-
-#: models.py:424
-msgid "Timor-Leste"
-msgstr ""
-
-#: models.py:425
-msgid "Turkmenistan"
-msgstr ""
-
-#: models.py:426
-msgid "Tunisia"
-msgstr ""
-
-#: models.py:427
-msgid "Tonga"
-msgstr ""
-
-#: models.py:428
-msgid "Turkey"
-msgstr ""
-
-#: models.py:429
-msgid "Trinidad and Tobago"
-msgstr ""
-
-#: models.py:430
-msgid "Tuvalu"
-msgstr ""
-
-#: models.py:431
-msgid "Taiwan"
-msgstr ""
-
-#: models.py:432
-msgid "Tanzania, United Republic of"
-msgstr ""
-
-#: models.py:433
-msgid "Ukraine"
-msgstr ""
-
-#: models.py:434
-msgid "Uganda"
-msgstr ""
-
-#: models.py:435
-msgid "United States Minor Outlying Islands"
-msgstr ""
-
-#: models.py:436
-msgid "United States"
-msgstr "États-Unis"
-
-#: models.py:437
-msgid "Uruguay"
-msgstr ""
-
-#: models.py:438
-msgid "Uzbekistan"
-msgstr ""
-
-#: models.py:439
-msgid "Holy See (Vatican City State)"
-msgstr ""
-
-#: models.py:440
-msgid "Saint Vincent and the Grenadines"
-msgstr ""
-
-#: models.py:441
-msgid "Venezuela"
-msgstr ""
-
-#: models.py:442
-msgid "Virgin Islands, British"
-msgstr ""
-
-#: models.py:443
-msgid "Virgin Islands, U.S."
-msgstr ""
-
-#: models.py:444
-msgid "Vietnam"
-msgstr ""
-
-#: models.py:445
-msgid "Vanuatu"
-msgstr ""
-
-#: models.py:446
-msgid "Wallis and Futuna"
-msgstr ""
-
-#: models.py:447
-msgid "Samoa"
-msgstr ""
-
-#: models.py:448
-msgid "Yemen"
-msgstr ""
-
-#: models.py:449
-msgid "Mayotte"
-msgstr ""
-
-#: models.py:450
-msgid "South Africa"
-msgstr ""
-
-#: models.py:451
-msgid "Zambia"
-msgstr ""
-
-#: models.py:452
-msgid "Zimbabwe"
-msgstr ""
-
 #: models.py:460
 #, python-format
 msgid "%(code)s: %(name)s"
@@ -1128,11 +112,11 @@ msgstr "pays"
 
 #: models.py:476
 msgid " ("
-msgstr ""
+msgstr " ("
 
 #: models.py:476
 msgid ")"
-msgstr ""
+msgstr ")"
 
 #: models.py:485
 msgid "is Authenticated"
@@ -1185,6 +169,3 @@ msgstr "Secteur par pays"
 #: cms_plugins/segment_plugins.py:107
 msgid "Segment by auth"
 msgstr "Secteur par auth"
-
-#~ msgid " equals "
-#~ msgstr " est égal à "
